fixes and enhancements
